@@ -186,8 +186,9 @@ test thread-4.3 {TclThreadSend preserve errorInfo} {testthread} {
     set len [llength [testthread names]]
     set serverthread [testthread create]
     set x [catch {testthread send $serverthread {set undef}} msg]
+    set savedErrorInfo $::errorInfo
     threadReap
-    list $len $x $msg $::errorInfo
+    list $len $x $msg $savedErrorInfo
 } {1 1 {can't read "undef": no such variable} {can't read "undef": no such variable
     while executing
 "set undef"
@@ -199,16 +200,18 @@ test thread-4.4 {TclThreadSend preserve code} {testthread} {
     set serverthread [testthread create]
     set ::errorInfo {}
     set x [catch {testthread send $serverthread {set ::errorInfo {}; break}} msg]
+    set savedErrorInfo $::errorInfo
     threadReap
-    list $len $x $msg $::errorInfo
+    list $len $x $msg $savedErrorInfo
 } {1 3 {} {}}
 test thread-4.5 {TclThreadSend preserve errorCode} {testthread} {
     threadReap
     set ::tcltest::mainThread [testthread names]
     set serverthread [testthread create]
     set x [catch {testthread send $serverthread {error ERR INFO CODE}} msg]
+    set savedErrorCode $::errorCode
     threadReap
-    list $x $msg $::errorCode
+    list $x $msg $savedErrorCode
 } {1 ERR CODE}
 
 
