@@ -1,3 +1,11 @@
+2009-10-18  Joe Mistachkin  <joe@mistachkin.com>
+
+	* tests/thread.test (thread-4.[345]): [Bug 1565466]: Correct tests to
+	save their error state before the final call to threadReap just in case
+	it triggers an "invalid thread id" error.  This error can occur if one
+	or more of the target threads has exited prior to the attempt to send
+	it an asynchronous exit command.
+
 2009-10-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclVar.c (UnsetVarStruct, TclDeleteNamespaceVars)
